--- a/Frontend/src/app/modules/products/components/product-form/product-form.component.html
+++ b/Frontend/src/app/modules/products/components/product-form/product-form.component.html
@@ -5,14 +5,14 @@
             <div class="flex flex-col justify-between p-6 break-words h-full overflow-y-auto">
                 <div class="flex flex-col">
                     <div class="flex items-center justify-between text-admin-primary-100">
-                        <h3 class="text-2xl font-semibold"></h3>
+                        <h3 class="text-2xl font-semibold">Agregar producto</h3>
 
                         <button class="text-3xl" (click)="closeSidebar()">
                             <i class="fa-solid fa-xmark"></i>
                         </button>
                     </div>
 
-                    <form class="mt-10 flex flex-col items-center justify-items-center w-full gap-y-8">
+                    <form class="my-10 flex flex-col items-center justify-items-center w-full gap-y-8">
                         <div class="flex flex-col gap-y-0.5">
                             <label>Nombre<span class="text-red-600 font-semibold">*</span>:</label>
                 
@@ -68,6 +68,16 @@
                             <label>Disponible<span class="text-red-600 font-semibold">*</span>:</label>
                 
                             <input type="text" class="input-ctrl admin w-full" placeholder="Nombre del producto" required/>
+                
+                            <small class="text-sm text-error-100 italic">
+                                *Es necesario llenar este campo, solo puede contener números y debe tener 10 dígitos
+                            </small>
+                        </div>
+
+                        <div class="flex flex-col gap-y-0.5">
+                            <label>Imágen<span class="text-red-600 font-semibold">*</span>:</label>
+                
+                            <input type="file" class="input-ctrl admin w-full file:border-none file:bg-transparent" required/>
                 
                             <small class="text-sm text-error-100 italic">
                                 *Es necesario llenar este campo, solo puede contener números y debe tener 10 dígitos
