--- a/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
+++ b/Frontend/src/app/shared/components/menu-sidebar/menu-sidebar.component.html
@@ -1,7 +1,7 @@
 <div class="p-4 rounded-b-lg md:min-h-screen md:p-6 md:h-full md:rounded-r-lg bg-light shadow-lg">
     <div class="flex md:hidden justify-between items-center">
         <div class="flex">
-            <img class="w-10 mr-2" src="/img/logo.png" />
+            <img class="w-10 mr-2" src="/assets/img/logo.png" />
 
             <h3 class="font-medium text-2xl">Pastes</h3>
         </div>
@@ -52,7 +52,7 @@
     <div class="hidden md:flex w-60 flex-col justify-between h-full">
         <div class="flex flex-1 flex-col gap-y-4">
             <div class="flex flex-col justify-center items-center">
-                <img class="w-40" src="/img/logo.png" />
+                <img class="w-40" src="/assets/img/logo.png" />
             </div>
 
             <button class="flex justify-center items-center py-1.5 rounded-lg border border-primary-100 bg-orange-50 text-primary-100 hover:text-white hover:bg-primary-100"
